// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`match produces quads using  lists 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix sh: <http://www.w3.org/ns/shacl#> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix foaf: <http://xmlns.com/foaf/0.1/> .
@prefix purl: <http://purl.org/dc/terms/> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .
"
`;

exports[`match produces quads using embedded tag 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix sh: <http://www.w3.org/ns/shacl#> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix foaf: <http://xmlns.com/foaf/0.1/> .
@prefix purl: <http://purl.org/dc/terms/> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

<http://example.org/named/1> a ex:Role ;
	schema:name \\"Pancake maker\\" ;
	ex:assignment <http://example.org/named/2>, <http://example.org/named/3> ;
	ex:purpose \\"To make the best Pancakes in the world\\" ;
	ex:tasks \\"Mix ingredients\\", \\"Heat the pan\\", \\"Prepare the Pancakes\\", \\"And a paragraph, explaining even more things\\" .

<http://example.org/named/2> rdf:label \\"Bob\\" ;
	ex:action \\"prepare\\" .

<http://example.org/named/3> rdf:label \\"Alice\\" ;
	ex:action \\"cook\\" .

<http://example.org/named/4> a ex:Role ;
	schema:name \\"Pancake seller\\" ;
	ex:assignment <http://example.org/named/5> ;
	ex:purpose \\"Sell the Pancakes to the customers\\" ;
	ex:tasks \\"Coordination of Pancake economic activities\\", \\"Advertise the Pancakes\\" .

<http://example.org/named/5> rdf:label \\"Charlie\\" .

"
`;
